<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbarInclude"
        layout="@layout/view_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userInfoHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarInclude">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:transitionName="@string/transition_user_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/Widget.MaterialComponents.ShapeableImageView.CornerRadius20" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/userTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:transitionName="@string/transition_user_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/userImageView"
            app:layout_constraintTop_toTopOf="@id/userImageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/userFullNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:transitionName="@string/transition_user_full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/userImageView"
            app:layout_constraintTop_toBottomOf="@id/userTitleTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userImageView">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/infoButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.NoInsets"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:background="@android:color/transparent"
                android:text="@string/user_details_info_button"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/infoIndicatorView"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/user_info_tabs_button_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/infoButton"
                app:layout_constraintStart_toStartOf="@id/infoButton"
                app:layout_constraintTop_toBottomOf="@id/infoButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addressButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.NoInsets"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:background="@android:color/transparent"
                android:text="@string/user_details_address_button"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/infoButton"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/addressIndicatorView"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/user_info_tabs_button_shape"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/addressButton"
                app:layout_constraintStart_toStartOf="@id/addressButton"
                app:layout_constraintTop_toBottomOf="@id/addressButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userInfoHeader">

        <ProgressBar
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ViewSwitcher
        android:id="@+id/userInfoViewSwitcher"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userInfoHeader">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/infoContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="32dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/genderContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/genderTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_details_gender_title"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/userGenderTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/genderTitleTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Male" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/dateOfBirthTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_details_date_of_birth_title"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/userDateOfBirthTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/dateOfBirthTitleTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="26/01/1992" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/registrationDateTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_details_registration_date_title"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/userRegistrationDateTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/registrationDateTitleTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="26/01/2021" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/emailTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_details_email_title"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/userEmailTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/emailTitleTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="email@email.com" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/phoneTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_details_phone_title"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/userPhoneTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/phoneTitleTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="0666666666" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/userAddressTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Address" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/googleComingSoonTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:text="@string/user_details_google_coming_soon"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userAddressTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ViewSwitcher>
</androidx.constraintlayout.widget.ConstraintLayout>